# temp

./: .gitignore  README.md
Task1/: .gitignore  CMakeLists.txt  README.md
Task1/include/: Base.h  Client.h  Server.h
Task1/source/: Base.cpp  Client.cpp  Server.cpp  client_exe.cpp  server_exe.cpp
Task2/: CMakeLists.txt  main.cpp
Task2/doc/: README.md
Task2/include/: AudioBar.h  AudioBarWidget.h  AudioData.h  AudioDataWidget.h  AudioEngine.h  AudioFile.h  AudioManager.h  AudioManagerWidget.h  AudioWidget.h  AudioWindow.h  AudioWindowWidget.h  IndexedButton.h  MainMenuWidget.h  MainWindow.h  Player.h  ScrollArea.h  ScrollBar.h  ScrollButton.h  SearcherWidget.h  VideoWidget.h  VideoWindow.h  VideoWindowWidget.h  cmake_pch.h
Task2/source/: AudioBar.cpp  AudioBarWidget.cpp  AudioData.cpp  AudioDataWidget.cpp  AudioEngine.cpp  AudioFile.cpp  AudioManager.cpp  AudioManagerWidget.cpp  AudioWidget.cpp  AudioWindow.cpp  AudioWindowWidget.cpp  IndexedButton.cpp  MainMenuWidget.cpp  MainWindow.cpp  Player.cpp  ScrollArea.cpp  ScrollBar.cpp  ScrollButton.cpp  SearcherWidget.cpp  VideoWidget.cpp  VideoWindow.cpp  VideoWindowWidget.cpp  main.cpp
